--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.5.1",
     "i18next": "^25.8.4",
     "i18next-browser-languagedetector": "^8.2.0",
+    "lucide-react": "^0.468.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.71.1",
